????/??/?? Namespace Cleanup
  - Renamed set primitive to make-set.
  - Renamed dict primitive to make-dict.
  - Renamed tc-append! primitive to tc-add!
  - Renamed tc-splice! primitive to tc-append!
  - Modified tc-add! to accept multiple items, not just one.
  - Modified tc-remove! to accept multiple items, not just one.
  - Modified iter in lib/iterate to generate tc iterators.
  - tc no longer considered a list by list predicate.
  - tc no longer considered a pair by pair predicate.
  - tc no longer a subtype of pair.
  + Optimization: Where is wasp_frame_context used? Serious heap consumer..

2008/06/11 WaspDoc Parses Module Files
  - Added waspdoc/waspdoc.ms
  - waspdoc/waspdoc can analyze module files for their imports and exports
    !! Note, this does not identify a module's macro exports, nor does it expand those macros. 

2008/06/10 Subsystems Back From The Future
  - Added subsystem compilation back into the build system.
  - Restored regex subsystem into the build system.
  - Restored subsystem installation in the install script.
  - Added filesystem subsystem.
  - Moved all filesystem primitives other than file open and read primitives to filesystem 
    subsystem.
  - Removed uses of file-path? from core.
  - Added dependency on sys/filesystem to compiler.

2008/06/10 Initial Import from WaspVM 0.3
  This is a fork of WaspVM 0.3 devel as of 2008/06/05 with reduced build complexity and the
  removal of some functionality not needed for installation or compilation.  It is the new
  development focus of the Wasp project -- see the README for details.

  - WaspVM compiles on Linux 2.6 with GNU toolchain.
  - Removed timeouts, async I/O, crc32 
  - WaspC runs identically under Rewind VM.
  - Wasp REPL runs under Rewind VM.
  - Ported over all dependencies of WaspC and REPL to Rewind.
  - Ported install script back into build system.
